fixing the collapse section

--- a/css/style.scss
+++ b/css/style.scss
@@ -31,3 +31,30 @@ body{
 
   }
 }
+
+.btn-newsletter{
+  background-color: $primary-color;
+}
+.btn-newsletter:hover{
+  background-color: rgba(255, 255, 255, 0.15);
+}
+
+.info-header{
+  width: 50%;
+  margin: auto;
+  border-bottom: 1px #ddd solid;
+}
+
+
+// Media Queries
+@media(max-width:768px){
+  #showcase{
+    min-height: 500px;
+    h1{
+      font-size: 4rem;
+    }
+  }
+  .mb-resp{
+    margin-bottom: 1rem;
+  }
+}
